[package]
name = "alice-hrm"
version = "1.1.0"
edition = "2021"
authors = ["Moroya Sakamoto <sakamoro@alicelaw.net>"]
license = "AGPL-3.0"
description = "ALICE Human Resource Management — attendance, payroll, leave, shift, evaluation"

[lib]
crate-type = ["rlib"]

[dependencies]
alice-blockchain = { path = "../ALICE-Blockchain" }
